# Ali-Biodiversity-Benchmark

./: .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  adding-a-benchmark-model.md  benchmark-active-dataset.md  benchmark-arena.md  benchmark-comparative-ranking.md  benchmark-credit-safeguards.md  benchmark-human-review.md  benchmark-i18n.md  benchmark-model-size.md  benchmark-rerun-ops.md  benchmark-run-batching.md  benchmark-sharing.md  benchmark-translation.md  benchmark-trust.md  benchmark-ui-design.md  benchmark-webapp.md  llm-sdk-gotchas.md  rg-match-render-artifact.md
artifacts/benchmark-ui/: index.html  package.json
attached_assets/: Biodiversity_Benchmark_100_V3_(1)_1780995353668.json  Biodiversity_Benchmark_100_V4_implicit_relational_1781012531147.json  Biodiversity_Benchmark_80_V2_discriminant_1780993755525.json  Pasted--id-TAX-HARD-001-topic-synonymie-difficulty-expert-ques_1781702501527.txt  Pasted-Cr-e-une-application-Python-compl-te-pour-benchmarker-p_1780921198432.txt  Pasted-Franchement-la-maquette-est-d-j-tr-s-bonne-Elle-ressemb_1781610310751.txt  biodiversity_judgment_benchmark_800_questions_1780921059311.json  bjb_kg_reasoning_extension_200_questions_1780931647914.jsonl
biodiversity-benchmark/: .gitignore  README.md  biodiversity_benchmark_100_v3.json  biodiversity_benchmark_100_v4.json  biodiversity_judgment_benchmark_800_questions.json  config.py  evaluator.py  fair13_chunk.py  main.py  report.py  requirements.txt
biodiversity-benchmark/providers/: __init__.py  anthropic_provider.py  base.py  (+5 more)
(+42 files in other folders)
