[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.107.1",
    "google-genai>=2.8.0",
    "mistralai>=2.4.9",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tabulate>=0.10.0",
    "tenacity>=9.1.4",
    "tqdm>=4.68.1",
]
